trying to fix clock hands on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,6 +65,7 @@ body,
 }
 
 .clock{
+  position:relative;
   height: 200px;
   width: 200px;
   background-color: rgba(255,255,255,0.06);
